# guacamole-datadiode

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: build.yml  build_docker.yml  build_gmdatadiode.yml  docker-publish.yml
3dd/: .gitignore  README.md
3dd/apps/gcdbroker/src/: approver.cpp  main.cpp  meson.build  sync_faker.cpp
3dd/apps/gcdbroker/src/nethandlers/: guacd_read_handler.cpp  guacd_send_handler.cpp  tcp_read_handler.cpp  tcp_send_handler.cpp  udp_recv_handler.cpp  udp_send_handler.cpp
3dd/apps/gmlbroker/: meson.build
3dd/apps/gmlbroker/include/: approval_registry.h  channel_mailbox.h  forward_keepalive_filter.h  handshake_forger.h  return_filter.h
3dd/apps/gmlbroker/include/nethandlers/: guacamole_accept_handler.h  guacamole_read_handler.h  guacamole_send_handler.h  tcp_accept_handler.h  tcp_read_handler.h  tcp_send_handler.h  udp_send_handler.h
3dd/apps/gmlbroker/src/: approval_registry.cpp  channel_mailbox.cpp  clipboard_ack_faker.cpp  forward_keepalive_filter.cpp  handshake_forger.cpp  main.cpp  meson.build
3dd/apps/gmlbroker/src/nethandlers/: guacamole_accept_handler.cpp  guacamole_read_handler.cpp  guacamole_send_handler.cpp  tcp_accept_handler.cpp  tcp_read_handler.cpp  tcp_send_handler.cpp  udp_recv_handler.cpp  udp_send_handler.cpp
3dd/apps/gmlbroker/src/tests/: meson.build  test_handshake_forger.cpp
3dd/apps/gmlbroker/tests/: meson.build
3dd/apps/guard/: meson.build
3dd/apps/guard/include/: approver.h  guacparser.h  guard_opcode_parser.h
3dd/apps/guard/src/: approver.cpp  guacparser.cpp  guard_opcode_parser.cpp  main.cpp
3dd/apps/guard/tests/: main.cpp  meson.build  test_parser.cpp
3dd/apps/hguacamole/src/: main.cpp  meson.build
3dd/apps/hrx_proxy/src/: main.cpp  meson.build
3dd/apps/lguacamole/src/: main.cpp  meson.build
3dd/apps/lrx_proxy/: meson.build
3dd/apps/lrx_proxy/src/: main.cpp  meson.build
3dd/docs/: install-and-run.md
3dd/scripts/: codeql-scan.sh
3dd/setup/: 1node-routing-example.yml  routing-example.yml  setup.py  singlenode-setup.py
3dd/src/hguacamole/: main.cpp  meson.build
3dd/src/lguacamole/: main.cpp  meson.build
3dd/src/ltx_proxy/: main.cpp  meson.build
ddproxies/: .gitignore  README.md  compile.sh  gmclient.cpp  gmproxyin.cpp  gmserver.cpp  guac-proxy-egress.cpp  guac-proxy-ingress.cpp  guac-proxy-inress
ddproxies/include/: tcpclient.hpp  tcpserver.hpp  udpclient.hpp  udpserver.hpp
ddproxies/proxy-egress/: README.md
ddproxies/proxy-ingress/: Dockerfile
docker/: README.md
docker/flatcar-webserver-test/: app.py
docker/gmclient/: Dockerfile  build.sh  entrypoint.sh
docker/gmproxyin/: Dockerfile  build.sh  docker.txt  entrypoint.sh
docker/gmproxyout/: Dockerfile  build.sh  docker.txt  entrypoint.sh
docker/gmserver/: .dockerignore  Dockerfile  build.sh  entrypoint.sh
docker/node-logging-proxy/: Dockerfile  README.md  app.py  entrypoint.sh  send-log.py
docker/test/: compose.yaml  docker-guacamole.txt  initdb.sql
docker/update-node-proxy/: Dockerfile  README.md  app.py  entrypoint.sh  test_upload.py
dockers/: README.md
dockers/_docker/: NOG twee vragen.md
dockers/docker-compose/: README.md  compose-1-node-dockerhub.yml  compose-1-node.yml  compose-2-node-high.yml  compose-2-node-low.yml  compose-3-node-guard.yml  compose-3-node-high.yml  compose-3-node-low.yml  tls-init.sh
dockers/gcdbroker/: DOCKERHUB.md  Dockerfile  README.md  entrypoint.sh
dockers/gmguard/: DOCKERHUB.md  Dockerfile  README.md  entrypoint.sh
dockers/gmlbroker/: DOCKERHUB.md  Dockerfile  README.md  entrypoint.sh
dockers/nettest/: DOCKERHUB.md  Dockerfile  README.md
dockers/test-guacamole/: Dockerfile  README.md
dockers/test-rdp/: Dockerfile  start-xrdp.sh
dockers/test-sshd/: Dockerfile
documentation/: FUTURE.md  GUACAMOLE.md  IMPROVEMENTS.md  PAPER.md  README.md  guacamole-protocol.txt  opcodes-ssh-1.txt  opcodes-ssh-2.txt  opcodes-ssh-3.txt  opcodes-ssh-4.txt
flatcar/: .gitignore  FLATCAR.md  HARDENING.md  README.md  config.bu  create-flatcar-files.sh  flatcar.conf
flatcar/docker-test-image/: Dockerfile
gmdatadiode/: Makefile  README.md  compile.sh  gmclient.cpp  gmproxyin.cpp  gmproxyout.cpp  gmserver.cpp
gmdatadiode/include/: queuets.hpp  tcpclient.hpp  tcpserver.hpp  threadsafe.hpp  udpclient.hpp  udpserver.hpp
gmdatadiode/proxy-egress/: Dockerfile
gmdatadiode/proxy-ingress/: README.md
gmdd-python/: README.md  setup.py  x11keysyms.csv
gmtrafficdumper/: README.md  docker-compose.yml
proxies/: .dockerignore  .gitignore  README.md
proxies/gcdbroker/: meson.build
proxies/gcdbroker/include/: running.h  sync_faker.h
proxies/gcdbroker/include/nethandlers/: guacd_read_handler.h  guacd_send_handler.h
proxies/gcdbroker/src/: main.cpp  sync_faker.cpp
proxies/gcdbroker/src/nethandlers/: guacd_read_handler.cpp  guacd_send_handler.cpp  udp_recv_handler.cpp  udp_send_handler.cpp
proxies/gcdbroker/tests/: meson.build  test_sync_faker.cpp
proxies/gmguard/: meson.build
proxies/gmguard/include/: approver.h  guard_opcode_parser.h
proxies/gmguard/src/: approver.cpp  guard_opcode_parser.cpp  main.cpp
proxies/gmguard/tests/: meson.build  test_parser.cpp
proxies/gmlbroker/: meson.build
proxies/gmlbroker/include/: approval_registry.h  channel_mailbox.h  clipboard_ack_faker.h  forward_keepalive_filter.h  handshake_forger.h  return_filter.h
proxies/gmlbroker/include/nethandlers/: guacamole_accept_handler.h  guacamole_read_handler.h  guacamole_send_handler.h  udp_recv_handler.h  udp_send_handler.h
proxies/gmlbroker/src/: approval_registry.cpp  channel_mailbox.cpp  clipboard_ack_faker.cpp  forward_keepalive_filter.cpp  handshake_forger.cpp  main.cpp  return_filter.cpp
proxies/gmlbroker/src/nethandlers/: guacamole_accept_handler.cpp  guacamole_read_handler.cpp  guacamole_send_handler.cpp  udp_recv_handler.cpp  udp_send_handler.cpp
proxies/gmlbroker/tests/: meson.build  test_clipboard_ack_faker.cpp  test_forward_keepalive_filter.cpp  test_handshake_forger.cpp
proxies/nettest/: README.md  (+4 more)
pyproxy/: README.md  pyproxy.py
tools/: README.md
(+241 files in other folders)
